# Real-Time-Telemetry-Example

./: .gitignore  CHANGELOG_WORLD_MODEL.md  FLASK_README.md  HF_README.md  INSTALLATION.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  VESC_INTEGRATION.md  WORLD_MODEL.md  WORLD_MODEL_SUMMARY.md  app.py  app_enhanced.py  example_vesc_plot.py  install_dependencies.py  push_to_huggingface.py  pyproject.toml  requirements.txt  run_app.sh  setup.py  solar.py
.github/workflows/: python-app.yml
examples/: annotate_telemetry.py  collect_vesc_data.py  show_model_parameters.py  world_model_demo.py  world_model_quickstart.py
notebooks/: Advanced_ML_Tutorial.ipynb  Anomaly_Detection.ipynb  Solar_Regatta_Plotly_Dashboard.ipynb  Solar_Regatta_Quickstart.ipynb
solar_regatta/: __init__.py  cli.py
solar_regatta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
solar_regatta/core/: __init__.py  analysis.py
solar_regatta/ml/: __init__.py  anomaly.py  evaluation.py  features.py  model_info.py  models.py  system_id.py  tree_models.py  world_model.py
solar_regatta/vesc/: __init__.py  collector.py  gps.py  protocol.py
solar_regatta/viz/: __init__.py  plotly_charts.py  world_model_viz.py
solar_regatta/web/: __init__.py  app.py
static/css/: style.css
static/js/: dashboard.js
templates/: dashboard.html
