[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-regatta"
version = "0.1.0"
description = "A Python package for analyzing and visualizing solar boat race telemetry data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Charlie Cullen", email = "charliewcullen@gmail.com"},
]
keywords = ["solar", "boat", "telemetry", "analysis", "visualization", "VESC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "plotly>=5.17.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.3",
    "mgrs>=1.4.6",
    "pyproj>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/pixelclubsf/Real-Time-Telemetry-Example"
"Bug Reports" = "https://github.com/pixelclubsf/Real-Time-Telemetry-Example/issues"
Source = "https://github.com/pixelclubsf/Real-Time-Telemetry-Example"

[project.scripts]
solar-regatta = "solar_regatta.cli:main"

[tool.setuptools]
packages = ["solar_regatta", "solar_regatta.core", "solar_regatta.ml", "solar_regatta.viz"]
include-package-data = true

[tool.setuptools.package-data]
solar_regatta = []
